[package]
name = "hexdino"
version = "0.1.0"
authors = ["Luz"]
description = "A hex editor with vim like keybindings written in Rust."
homepage = "https://github.com/Luz/hexdino/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/hexdino/"
include = ["/src/**/*.rs", "/src/**/*.pest", "/Cargo.toml", "/LICENSE", "/logo.png", "README.md"]

[[bin]]
name = "hexdino"
path = "src/main.rs"

[dependencies]
libc = "^0.2"
ncurses = "^5.98"
getopts = "^0.2"
pest = "^2.1"
pest_derive = "^2.1"
memmem = "^0.1.1"

