[package]
name = "hexdino"
version = "0.1.2"
authors = ["Luz"]
description = "A hex editor with vim like keybindings written in Rust."
homepage = "https://github.com/Luz/hexdino"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/hexdino"
include = ["/src/**/*.rs", "/src/**/*.pest", "/Cargo.toml", "/LICENSE", "/logo.png", "README.md"]
edition = "2021"

[[bin]]
name = "hexdino"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
libc = "0.2"
crossterm = "0.25.0"
structopt = "0.3"
pest = "2.1"
pest_derive = "2.1"
memmem = "0.1.1"

